<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipes_rv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activities_background"/>
