<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:name="exampls.com.bakingapp.UI.RecipesFragment"
    android:layout_width="match_parent"
    android:id="@+id/frame_layout"
    android:layout_height="match_parent" />
